--- a/public/views/index.html
+++ b/public/views/index.html
@@ -6,7 +6,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/angular_material/0.6.1/angular-material.min.css">
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
-        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
+        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="../css/froala_editor.min.css">
+        <link rel="stylesheet" href="../css/froala_style.min.css">
+        <link rel="stylesheet" href="../css/froala_content.min.css">
         <link rel="stylesheet" href="../css/mainCustom.css">
         <link rel="stylesheet" href="../css/home-page.css">
 
@@ -26,7 +29,7 @@
         <script src="/controllers/admin.js"></script>
         <script src="/modules/growl.js"></script>
         <script src="/modules/core.js"></script>
-    </head>
+    </head>    
 
     <body class="menu menu-right">
         <!--<nav class="navbar navbar-default" role="navigation">
@@ -88,9 +91,15 @@
             </div>
         </footer>
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-        <script src="../js/script.js"></script>
+        <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+        <script src="../js/froala_editor.min.js"></script>
+        <script src="../js/plugins/block_styles.min.js"></script>
+        <script src="../js/plugins/colors.min.js"></script>
+        <script src="../js/plugins/font_family.min.js"></script>
+        <script src="../js/plugins/font_size.min.js"></script>
+        <script src="../js/plugins/lists.min.js"></script>
+        <script src="../js/plugins/tables.min.js"></script>
         <script src="../js/fly-out-menu.js"></script>
     </body>
 </html>
