--- a/public/views/addproject.html
+++ b/public/views/addproject.html
@@ -1,13 +1,12 @@
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal fade" id="imageModal" tabindex="-1" role="dialog" aria-labelledby="imageModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                <h4 class="modal-title" id="myModalLabel">Modal title</h4>
-            </div>
-            <div class="modal-body">
-                <form id="imageform" enctype="multipart/form-data"> 
-
+            <form id="imageform" enctype="multipart/form-data"> 
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                    <h4 class="modal-title" id="imageModalLabel">Modal title</h4>
+                </div>
+                <div class="modal-body">
                     <h2>Upload Image</h2>
 
                     <div>
@@ -15,15 +14,30 @@
                         <input id="inputImage" type="file" accept="image/*" name="image">
 
                         <img ng-show="image" ng-src="{{ image.url }}" type="{{ image.file.type }}">
-                        <button uploadimageform type="submit">Add</button>
-                        <button type="reset">Clear</button>
                     </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button uploadimageform type="submit" class="btn btn-primary">Save changes</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 
-                </form>
+<div class="modal fade" id="textModal" tabindex="-1" role="dialog" aria-labelledby="textModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                <h4 class="modal-title" id="textModalLabel">Modal title</h4>
+            </div>
+            <div class="modal-body">
+                <textarea textform name="content" id="edit"></textarea>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
+                <button uploadtextform id="submittextform" type="button" class="btn btn-primary">Save changes</button>
             </div>
         </div>
     </div>
@@ -59,7 +73,7 @@
 
 <div class="menu-side-right">
     
-    <form name="ProjectForm">
+    <form>
 
         <div class="form-group">
             <label for="title">Project titel</label>
@@ -75,10 +89,11 @@
             <label for="students">Add the project students</label>
             <textarea class="form-control" id="students" placeholder="Add the project students" ng-model="formData.students" ng-list="&#10;" ng-trim="false" required></textarea>
         </div>
-        <div class="form-group">
-            <label for="content">Add your content</label>
-            <input type="text" class="form-control" id="content" placeholder="Enter the project description" ng-model="formData.content" required>
-        </div>
+
+        <!-- <div class="form-group">
+            <label for="content">Add your content</label> -->
+        <input style="display: none" type="text" class="form-control" id="content" placeholder="Enter the project description" ng-model="formData.content" required>
+        <!-- </div> -->
         <div class="form-group">
             <label for="grade">Select your grade</label>
             <input type="range" name="grade" id="grade" value="5" min="0" max="10" step="0.1" ng-model="formData.grade">
@@ -94,14 +109,29 @@
 
 </div>
 
+<div class="container">
+    
+    <div class="project-actions">
+        <a menuside href="#" class="menu-toggle btn btn-default pull-left">Toggle Menu</a>
+
+        <a updatecontent href="#" id="save-project" class="save-project btn btn-default text-center">Save</a>
+
+        <a menusideright href="#" class="menu-toggle-right btn btn-default pull-right">Toggle Menu Right</a>
+    </div>
+
+</div>
 
 <div id="project-content">
 
     <div class="page-header text-center ng-scope">
         <div class="header-image">
-            <img src="http://lorempixel.com/1200/250" alt="">
+            <div>
+                <div data-toggle="modal" data-target="#imageModal" class="image select-image"><i class="fa fa-plus-circle"></i> image</div>
+            </div>
             <div class="project-logo">
-                <img src="http://lorempixel.com/200/200" alt="">
+                <div> 
+                    <div data-toggle="modal" data-target="#imageModal" class="image select-image"><i class="fa fa-plus-circle"></i> image</div>
+                </div>
             </div>
         </div>
     </div>
@@ -119,33 +149,3 @@
     </div><!--end container -->
 
 </div><!-- end project-content -->
-
-<a menuside href="#" class="menu-toggle pull-left">Toggle Menu</a>
-<a menusideright href="#" class="menu-toggle-right pull-right">Toggle Menu Right</a>
-
-
-<!-- <form name="ProjectForm" class="form">
-    <div class="form-group">
-        <label for="title">Project titel</label>
-        <input type="text" class="form-control" id="title" placeholder="Enter your project-titel" ng-model="formData.title" required>
-    </div>
-    <div multiple class="form-group">
-        <select class="form-control" ng-model="formData.semester" required >
-            <option value="CRIA">CRIA</option>
-            <option value="ADEB">ADEB</option>
-        </select>
-    </div>
-    <div class="form-group">
-        <label for="students">Add the project students</label>
-        <textarea class="form-control" id="students" placeholder="Add the project students" ng-model="formData.students" ng-list="&#10;" ng-trim="false" required></textarea>
-    </div>
-    <div class="form-group">
-        <label for="content">Add your content</label>
-        <input type="text" class="form-control" id="content" placeholder="Enter the project description" ng-model="formData.content" required>
-    </div>
-    <div class="form-group">
-        <label for="grade">Select your grade</label>
-        <input type="range" name="grade" id="grade" value="5" min="0" max="10" step="0.1" ng-model="formData.grade">
-    </div>
-    <button type="submit" class="btn btn-default" ng-click="addProject()">Save</button>
-</form> -->
