--- a/public/views/about.html
+++ b/public/views/about.html
@@ -3,8 +3,7 @@
 </div>
 <div class="row full-row">
     <div class="col-sm-4 text-center about-container">
-        <div class="round-logo">
-            <img src="http://lorempixel.com/200/200" alt="">
+        <div class="round-logo-background">
         </div>
         <div class="inner-image">
             <img src="http://lorempixel.com/400/200" alt="">
@@ -15,8 +14,7 @@
         </div>
     </div>
     <div class="col-sm-4 text-center about-container">
-        <div class="round-logo">
-            <img src="http://lorempixel.com/200/200" alt="">
+        <div class="round-logo-background">
         </div>
         <div class="inner-image">
             <img src="http://lorempixel.com/400/200" alt="">
@@ -27,8 +25,7 @@
         </div>
     </div>
     <div class="col-sm-4 text-center about-container">
-        <div class="round-logo">
-            <img src="http://lorempixel.com/200/200" alt="">
+        <div class="round-logo-background">
         </div>
         <div class="inner-image">
             <img src="http://lorempixel.com/400/200" alt="">
