--- a/public/views/index.html
+++ b/public/views/index.html
@@ -42,27 +42,31 @@
             </div>
         </nav> --> 
 
-        <nav class="navbar navbar-default" role="navigation">
+        <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
+            <a class="navbar-brand" href="/">
+                <img alt="Brand" src="images/ICA.png"></img>
+            </a>
                 <div class="navbar-header">
-                  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                  </button>
-                  <a class="navbar-brand" href="/">ICA Portfolios</a>
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                  
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav navbar-right">
+                    <ul class="nav navbar-nav navbar-left">
+                        <li><a href="/">Home</a></li>
                         <li><a href="/projects">Student Work</a></li>
                         <li><a href="/about">About</a></li>
                         <li><a href="/admin">Admin Panel</a></li>
                         <form class="navbar-form navbar-left" role="search">
-                            <button class="btn btn-default" href="/addproject">Upload</button>
+                            <a href="/addproject" class="btn btn-default">Upload</a>
                             <div class="form-group">
                                 <input type="text" class="form-control" placeholder="Search">
                             </div>
@@ -73,7 +77,8 @@
             </div>
         </nav>
 
-        <div ng-view>
+
+        <div class="margin-view" ng-view>
 
         </div>
 
