Updated post configurator with standard content
- Added simple text editor for titles

--- a/public/views/addproject.html
+++ b/public/views/addproject.html
@@ -126,17 +126,19 @@
     <div class="page-header text-center ng-scope">
         <div class="header-image">
             <div>
-                <div data-toggle="modal" data-target="#imageModal" class="image select-image"><i class="fa fa-plus-circle"></i> image</div>
+                <div data-toggle="modal" data-target="#imageModal" class="image select-image"><i class="fa fa-plus-circle"></i> image banner</div>
             </div>
             <div class="project-logo">
                 <div> 
-                    <div data-toggle="modal" data-target="#imageModal" class="image select-image"><i class="fa fa-plus-circle"></i> image</div>
+                    <div data-toggle="modal" data-target="#imageModal" class="image select-image"><i class="fa fa-plus-circle"></i> logo</div>
                 </div>
             </div>
         </div>
     </div>
 
     <div class="container">
+
+        <div simpletextform id="simpleedit" class="project-title-edit">Project title (edit me by clicking me)</div>
     
         <div class="project-layouts" id="project-layouts">
         
