--- a/public/views/addproject.html
+++ b/public/views/addproject.html
@@ -43,6 +43,25 @@
     </div>
 </div>
 
+<div class="modal fade" id="youtubeModal" tabindex="-1" role="dialog" aria-labelledby="youtubeModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                <h4 class="modal-title" id="youtubeModalLabel">Modal title</h4>
+            </div>
+            <div class="modal-body">
+                <p>YouTube link:</p>
+                <input type="url" id="youtubeinput">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button uploadyoutubeform id="submityoutubeform" type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="menu-side">
     
     <div class="layout-item add-layout-image">
