--- a/public/CSS/home-page.css
+++ b/public/CSS/home-page.css
@@ -1,3 +1,30 @@
+.img-responsive {
+    display: block;
+    margin: 0 auto;
+    max-height: 903px;
+    width:100%;
+    border-bottom: 1px solid black;
+}
+
+#Carousel{
+    margin-top: -20px!important;
+    margin-bottom: 20px;
+}
+
+.carousel-indicators {
+    background: -moz-linear-gradient(left,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.65) 50%, rgba(0,0,0,0) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(0,0,0,0)), color-stop(50%,rgba(0,0,0,0.65)), color-stop(100%,rgba(0,0,0,0))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(left,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 50%,rgba(0,0,0,0) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(left,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 50%,rgba(0,0,0,0) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(left,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 50%,rgba(0,0,0,0) 100%); /* IE10+ */
+    background: linear-gradient(to right,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 50%,rgba(0,0,0,0) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#00000000',GradientType=1 ); /* IE6-9 */
+}
+
+/*
+Student work.
+*/
+
 .unplaced {
     height:calc(903px/3);
     margin-bottom: 30px;
@@ -6,19 +33,6 @@
 .unplaced > img {
     height:100%!important;
     width:100%;
-}
-
-.text-page-silder{
-    position: relative;
-    margin-top: -20px;
-    width:100%;
-    height:1050px;
-}
-
-.text-page-silder > img{
-    width:100%;
-    height:903px;
-
 }
 
 .page-info{
@@ -34,21 +48,6 @@
     word-wrap: break-word;
     text-align: center;
 }
-
-.winner-page-info {
-    position: absolute;
-    padding-top:50px;
-    font-size: 2em;
-    right:0;
-    margin-top:-450px;
-    height:280px;
-    width:610px;
-    z-index:20;
-    text-align: center;
-    border:1px solid #252525;
-    color:white;
-}
-
 
 .page-info > h3 {
     color:#252525;
