--- a/public/views/index.html
+++ b/public/views/index.html
@@ -106,5 +106,7 @@
         <script src="../js/plugins/lists.min.js"></script>
         <script src="../js/plugins/tables.min.js"></script>
         <script src="../js/fly-out-menu.js"></script>
+        <script src="../js/clamp.js"></script>
+        <script src="../js/home-clamp.js"></script>
     </body>
 </html>
