--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,12 +1,13 @@
 <div id="Carousel" class="carousel slide">
     <ol class="carousel-indicators">
-        <li ng-repeat="project in projects | limitTo:3" data-target="Carousel" data-slide-to="0" ng-class="{active : $first}"></li>
+        <li ng-repeat="project in projects | limitTo:3  track by $index" data-target="Carousel" data-slide-to="{{ $index }}" ng-class="{active : $first}"></li>
     </ol>
 
     <div id="carousel-style" class="carousel-inner">
         <div class="item" ng-repeat="project in projects | limitTo:3 track by $index" ng-class="{active : $first}">
-            <div class="page-info">
+            <div class="page-info-carousel">
                 <h3>{{ project.title }}</h3> 
+                <p id="clamp">{{ project.content }}</p>
             </div>
             <img class="img-responsive" alt="Responsive image" ng-src="http://www.lorempixel.com/1920/1080/">
         </div>
